fix: small styling readability improvement for the progress bar

--- a/style/main.scss
+++ b/style/main.scss
@@ -397,8 +397,13 @@ ul {
             min-width: 12rem;
             flex-grow: 1;
 
-            .through, .progress {
+            .through {
                 border-radius: 24px;
+            }
+
+            .progress {
+                border-top-left-radius: 24px;
+                border-bottom-left-radius: 24px;
             }
         }
 
